Bug 18321 - [3.3/3.4/4.0 regression] mmix-knuth-mmixware testsuite failure: gcc.c-torture/compile/20031023-4.c -O0, -O1
Summary: [3.3/3.4/4.0 regression] mmix-knuth-mmixware testsuite failure: gcc.c-torture...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Hans-Peter Nilsson
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2004-11-06 21:19 UTC by Hans-Peter Nilsson
Modified: 2004-12-29 20:11 UTC (History)
2 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: mmix-knuth-mmixware
Build:
Known to work:
Known to fail:
Last reconfirmed: 2004-12-28 17:47:26


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hans-Peter Nilsson 2004-11-06 21:19:36 UTC
Public note of failure (apparently since test case was added):
With LAST_UPDATED "Sat Nov  6 19:25:03 GMT 2004",
gcc/testsuite/gcc.c-torture/compile/20031023-1.c: In function 'bar':
gcc/testsuite/gcc.c-torture/compile/20031023-1.c:38: internal compiler error: in
change_address_1, at emit-rtl.c:1821
Comment 1 Andrew Pinski 2004-11-07 00:08:12 UTC
Hmm, I cannot reproduce this on a cross from powerpc-darwin (but it might be a local patch which is 
causing it to pass which I doubt it).
Comment 2 Hans-Peter Nilsson 2004-11-08 02:05:47 UTC
Fresh checkout on different system on i686-pc-linux-gnu (FC2).
Comment 3 Hans-Peter Nilsson 2004-11-08 02:07:26 UTC
... LAST_UPDATED "Mon Nov  8 00:53:12 UTC 2004", that is.
Comment 4 Hans-Peter Nilsson 2004-12-28 17:47:26 UTC
A bug in the epilogue code: using "int" instead of HOST_WIDE_INT.
This is a regression from 3.2, where the code got a clear error
(the test-case wasn't present there, though):
/gcc/testsuite/gcc.c-torture/compile/20031023-1.c: In function `bar':
/gcc/testsuite/gcc.c-torture/compile/20031023-1.c:38: stack frame too big
A fix seems trivial.
Comment 5 Hans-Peter Nilsson 2004-12-28 18:08:57 UTC
This isn't a 4.0 regression, it's a 3.2 regression. If you change it again,
please add a comment.
Comment 6 Andrew Pinski 2004-12-28 18:18:15 UTC
if you mean it is a regression from 3.2, then to mark it as such, not the other way around which is what 
you marked it as.
Comment 7 Hans-Peter Nilsson 2004-12-28 18:31:06 UTC
In reply to Comment #6, I did in comment #4.
I also changed the PR title, because [3.2 regression] meant to me a regression
from 3.2.  I see <URL:http://gcc.gnu.org/bugs/management.html> says otherwise.
Oh well.  Though as I'm not going to change 3.3 or 3.4 (too odd case, but do
feel free after a build and check), I changed back the title to say 4.0.
Comment 8 Hans-Peter Nilsson 2004-12-28 18:35:25 UTC
...oh right: "needs fixing" isn't the same as "going to be fixed".  Changed
back to 3.3/3.4/4.0.  Gah.
Comment 9 GCC Commits 2004-12-28 23:19:23 UTC
Subject: Bug 18321

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	hp@gcc.gnu.org	2004-12-28 23:19:13

Modified files:
	gcc            : ChangeLog 
	gcc/config/mmix: mmix.c 

Log message:
	PR target/18321
	* config/mmix/mmix.c (mmix_expand_epilogue): Change type of
	variable offset to HOST_WIDE_INT.  Remove obsolete comment.  Fix
	spacing.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.6973&r2=2.6974
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/mmix/mmix.c.diff?cvsroot=gcc&r1=1.72&r2=1.73

Comment 10 Hans-Peter Nilsson 2004-12-28 23:27:00 UTC
<URL:http://gcc.gnu.org/ml/gcc-patches/2004-12/msg02020.html>
Comment 11 Giovanni Bajo 2004-12-29 02:10:58 UTC
Hans, this was also a regression in 3.3 and 3.4, the patch should be applied 
there, or you should clarify that you are not going to fix the branches.
Comment 12 Hans-Peter Nilsson 2004-12-29 10:51:58 UTC
In response to comment #11:
You should clarify what clarification you expect besides what I say in comment
#7 and the target milestone setting.  Perhaps you missed it, because it was said
in passing?  In <URL:http://gcc.gnu.org/bugs/management.html> i see nothing
further on this.  Please add whatever clarification there too.
Again: I'm not going to apply the patch myself on those branches,
but I preapprove backporting it there, assuming the required before/after test
is done, of course.
Comment 13 Giovanni Bajo 2004-12-29 17:10:48 UTC
Hans: our policy prescribes that a regression in Bugzilla be kept open until it 
is fixed on all the active release branches, *or* the maintainter of the code 
affected by the bug explicitally decides that this bug will not be fixed in the 
branches.

This said, I had missed your note in comment #7. Since you are the maintainer 
of mmix, it is up to you to decide if you want to keep this bug in the branches 
or fix it there as well. If you prefer to not fix it, then it's fine.
Comment 14 Gabriel Dos Reis 2004-12-29 19:01:05 UTC
Subject: Re:  [3.3/3.4/4.0 regression] mmix-knuth-mmixware testsuite failure: gcc.c-torture/compile/20031023-4.c -O0, -O1

"giovannibajo at libero dot it" <gcc-bugzilla@gcc.gnu.org> writes:

| Hans: our policy prescribes that a regression in Bugzilla be kept open until it 
| is fixed on all the active release branches, *or* the maintainter of the code 
| affected by the bug explicitally decides that this bug will not be fixed in the 
| branches.
| 
| This said, I had missed your note in comment #7. Since you are the maintainer 
| of mmix, it is up to you to decide if you want to keep this bug in the branches 
| or fix it there as well. If you prefer to not fix it, then it's fine.

If HP believs that he has no interest in having the bug fixed on the
branches for mmix-knuth-xx users, let's close the PR.

-- Gaby
Comment 15 Hans-Peter Nilsson 2004-12-29 20:11:27 UTC
> If HP believs that he has no interest in having the bug fixed on the
> branches for mmix-knuth-xx users, let's close the PR.
 
I have interest, but only a little, not even as much as doing the minimal
work myself.  The PR is already closed.  Nothing here to see, move on.